Avance de Sesion 06

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -9,7 +9,7 @@ on:
 env:
   DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
   DOCKER_IMAGE_NAME: aforo255-nodejs-security-vrr
- 
+  
 jobs:
   docker:
     name: CI Release
@@ -23,6 +23,16 @@ jobs:
       run: docker login --username ${{ secrets.DOCKER_HUB_USER }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: Push the docker image
       run: docker push $DOCKER_HUB_USER/$DOCKER_IMAGE_NAME:v-$GITHUB_RUN_NUMBER
-	
- 
- 
+
+  merge-branch:
+    name: Merge to main
+    needs: docker 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Merge dev -> main 
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          target_branch: main
+          github_token: ${{ github.token }}
